# OpenCV_on_Window11

./: CMakeLists.txt  OpenCV.cc  README  build.sh  build_opencv.sh
